--- a/charts/cronjob/templates/cronjob.yaml
+++ b/charts/cronjob/templates/cronjob.yaml
@@ -4,14 +4,16 @@ metadata:
   name: {{ template "helpers.fullname" . }}-cronjob
   namespace: {{ .Values.namespace }}
 spec:
-  schedule: "{{ .Values.schedule }}"
+  schedule: "{{ .Values.job.schedule }}"
+  failedJobsHistoryLimit: "{{ .Values.job.failedJobsHistoryLimit }}"
+  successfulJobsHistoryLimit: "{{ .Values.job.successfulJobsHistoryLimit }}"
   jobTemplate:
     spec:
       template:
         spec:
           restartPolicy: OnFailure
           imagePullSecrets:
-            - name: ghcr
+            - name: {{ .Values.image.pullSecretName }}
           containers:
             - name: {{ .Chart.Name }}
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
