--- a/charts/cronjob/values.yaml
+++ b/charts/cronjob/values.yaml
@@ -2,12 +2,16 @@ namespace: apps
 
 nameOverride:
 
-schedule: "1 * * * *"
+job:
+  schedule: "1 * * * *"
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 533806089962.dkr.ecr.eu-central-1.amazonaws.com/portfolio-qplix-scraper
+  repository: ...
   tag: 0.1.0
+  pullSecretName: ghcr
 
 resources:
   limits:
