Add missing labels and fix create/enabled

--- a/charts/app/templates/serviceaccount.yaml
+++ b/charts/app/templates/serviceaccount.yaml
@@ -6,8 +6,9 @@ metadata:
   name: {{ include "helpers.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
   labels: {{- include "helpers.labels" . | nindent 4 }}
-  {{- if .Values.serviceAccount.annotations }}
+    app.kubernetes.io/managed-by: "Helm"
   annotations: {{ toYaml .Values.serviceAccount.annotations | nindent 4 }}
-  {{- end }}
+    meta.helm.sh/release-name: {{ include "helpers.name" . }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end }}
