--- a/charts/cronjob/values.yaml
+++ b/charts/cronjob/values.yaml
@@ -29,4 +29,4 @@ env:
   existingSecret:
   existingSecretMappings:
     # Map keys from existing secret to environment variable names
-    ENV_VAR_NAME: key-name
+    # ENV_VAR_NAME: key-name
